home screen spacing fix

--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,8 @@
   padding: 0;
 }
 
-body {
+html, body {
+  height: 100%;
   margin: 0;
 }
 
@@ -42,7 +43,7 @@ a {
   max-height: 100%;
 }
 
-.hero-section {
+.home {
   position: relative;
   width: 100%;
   height: 100vh;
@@ -51,14 +52,14 @@ a {
   margin: 0;
 }
 
-.hero-image {
+.home-image {
   width: 100%;
   height: 100%;
   object-fit: cover;
   object-position: center;
 }
 
-.hero-section::before {
+.home::before {
   content: "";
   position: absolute;
   top: 0;
@@ -69,7 +70,7 @@ a {
   z-index: 1;
 }
 
-.hero-text {
+.home-text {
   position: absolute;
   top: 50%;
   left: 50%;
@@ -77,6 +78,12 @@ a {
   text-align: center;
   color: white;
   z-index: 2;
+  width: 100%;
+  padding: 10vh 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 50px;
 }
 
 .title {
@@ -88,6 +95,14 @@ a {
 .bio {
   padding: 30px;
   font-size: clamp(1rem, 2vw, 1.5rem);
+}
+
+.title, .bio {
+  max-width: 600px;
+  width: 100%;
+  min-width: 300px;
+  margin: 0 auto;
+  padding: 0 10px;
 }
 
 .cta-button {
@@ -105,4 +120,25 @@ a {
 
 .cta-button:hover {
   background-color: #d65a23;
+}
+
+@media (max-width: 768px) {
+  .title {
+    font-size: clamp(1.5rem, 5vw, 3rem);
+    padding: 0 20px;
+  }
+
+  .home-text {
+    width: 70vw;
+    gap: 20px;
+  }
+
+  .bio {
+    font-size: clamp(0.8rem, 2vw, 1.2rem);
+    padding: 0 20px;
+  }
+
+  .cta-button {
+    margin-top: 30px;
+  }
 }
