--- a/src/courses.css
+++ b/src/courses.css
@@ -1,12 +1,3 @@
-* {
-  box-sizing: border-box;
-}
-
-html, body {
-  height: 100%;
-  margin: 0;
-}
-
 .courses {
   padding-top: 51px;
   background-color: #fff5e0;
